--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,126 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
+description: "Unlock the power of AI and elevate your content creation efforts to new heights with Robi!"
 ---
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
+  src="/images/hero.png"
+  alt="Robi Documentation"
+  style={{ borderRadius: '0.5rem' }}
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
+  src="/images/hero.png"
+  alt="Robi Documentation"
+  style={{ borderRadius: '0.5rem' }}
 />
 
-## Setting up
+# What is Robi AI?
 
-The first step to world-class documentation is setting up your editing environments.
+Unlock the power of AI and elevate your content creation process to new heights with **Robi AI**!
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+In a rapidly evolving digital landscape, Robi AI stands out as an all-in-one AI marketing copilot, offering a suite of AI-powered tools designed to help marketers, creators, and businesses produce high-quality content, boost SEO performance, and engage audiences effortlessly. Let's explore its key features and how Robi AI can transform your workflow.
 
-## Make it yours
+---
 
-Update your docs to your brand and add valuable content for the best user conversion.
+## 🚀 Robi AI Writer: The Core Tool for Content Creation
 
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+**Robi AI Writer** is the heart of the platform — a powerful AI writing assistant designed to generate high-quality, SEO-optimized content in minutes.
+
+### ✨ Key Features and Benefits:
+
+- **Ease of Use**: Create professional articles, blogs, social posts, and ad copy without any technical know-how.
+- **Factually Accurate Content**: Powered by real-time data and robust AI models to ensure accuracy and relevance.
+- **Competitor Analysis**: Gain insights into competitors' strategies and craft content that outranks them.
+- **In-depth Web Research**: AI-assisted research to support detailed, well-referenced articles.
+- **SEO Optimization**: Built-in SEO tools ensure that your content ranks well, including internal linking, citations, and keyword strategies.
+- **Rapid Content Production**: Generate optimized content in minutes, accelerating your marketing campaigns.
+
+---
+
+## 🎯 Robi SEO AI Agent: Your AI-Powered SEO Assistant
+
+The **SEO AI Agent** is a specialized mode in Robi AI that helps users streamline their SEO and content marketing workflows with AI-driven insights and automation.
+
+### 🧠 Workflow:
+
+### 1. **Research and Analyze**:
+- Market and competitor analysis
+- Keyword research and clustering
+- Audience segmentation
+
+### 2. **Create and Optimize**:
+- AI-generated content strategy
+- High-ranking articles and blog posts
+- Advanced on-page SEO optimization
+
+### 3. **Manage and Scale** *(Coming Soon)*:
+- Content calendar management
+- SEO performance tracking
+- Cross-platform content integration
+
+---
+
+## 💬 Robi Chat: Next-Gen AI Chat Assistant
+
+Say hello to **Robi Chat** — a conversational AI platform designed to interact intelligently, analyze real-time data, and generate creative solutions. Think ChatGPT, but tailored for marketing and business needs.
+
+### 🔑 Key Advantages:
+- **Real-Time Data**: Stay updated with AI that pulls in the latest information.
+- **Vision Capabilities**: Analyze and interpret images and charts.
+- **Media Engagement**: Interact with PDFs, URLs, audio, and more for a seamless experience.
+
+---
+
+## 🔍 Robi SEO Toolkit
+
+A comprehensive suite of AI-powered SEO tools to improve visibility and drive organic traffic.
+
+### 🛠️ Key Tools:
+
+- **Keyword Research**: Discover high-ranking keywords with search volume, difficulty scores, and competitive insights.
+- **SEO Optimizer**: Analyze, score, and auto-optimize your content for better rankings.
+- **Internal Linking AI**: Automate internal links for SEO and improved user navigation.
+- **Content Gap Analyzer**: Identify content gaps and generate AI suggestions to fill them.
+- **Topic Clustering**: Group keywords and content topics intelligently to create powerful content hubs.
+
+---
+
+## ✍️ Dynamic Content Generator
+
+Robi AI’s **Dynamic Content Generator** asks the right questions to understand your needs and creates polished, custom content — whether it’s an email, ad copy, or long-form blog post.
+
+### 🎨 Creative Use Cases:
+- Blog articles and SEO content
+- Marketing emails and landing pages
+- Product descriptions and ad copy
+- Social media posts and campaigns
+
+---
+
+## 🌐 Real Use Cases
+
+- **Content Marketing**: Boost your brand visibility with AI-generated, SEO-optimized content.
+- **Social Media Management**: Effortlessly craft engaging posts and captions.
+- **Customer Support**: Deploy AI chatbots to automate customer service.
+- **Education**: Assist students and educators in creating and researching content.
+- **Software Development**: Generate code snippets and technical documentation.
+
+---
+
+## 🚀 Start Creating with Robi AI
+
+Getting started with Robi AI is easy:
+
+1. **Sign Up** at [robiai.com](https://robiai.com).
+2. **Select a Tool**: Writer, SEO, Chat, or Design.
+3. **Describe Your Needs**: Enter a prompt or choose a template.
+4. **Generate and Edit**: Let AI do the heavy lifting and refine the output.
+5. **Publish and Scale**: Use the final content to grow your brand and business.
+
+---
+
+> **Robi AI** is built to empower marketers, creators, and teams to achieve more — in less time, with less effort. Whether you're writing articles, designing social posts, or managing SEO, Robi AI has you covered.  
+>  
+> **Start your AI journey today with [Robi AI](https://robiai.com).**
